[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Level_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Splitscreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Camera2D_1.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Camera2D_2.gd" type="Script" id=4]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 318.0
margin_bottom = 360.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 320, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer2/Viewport2"]
current = true
script = ExtResource( 4 )

[node name="ViewportContainer1" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="HBoxContainer/ViewportContainer1"]
size = Vector2( 320, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer1/Viewport1"]
current = true
script = ExtResource( 3 )

[node name="Level_01" parent="HBoxContainer/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]
